--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,7 @@
     />
 
     <link
+      id="excalidraw-socket-server-preconnect"
       href="%REACT_APP_SOCKET_SERVER_URL%/socket.io"
       rel="preconnect"
       crossorigin="anonymous"
@@ -89,6 +90,17 @@
       href="manifest.json"
       style="--pwacompat-splash-font: 24px Virgil;"
     />
+
+    <script id="excalidraw-runtime-config" type="application/json">
+      <%=
+        JSON.stringify({
+          REACT_APP_BACKEND_V1_GET_URL: process.env.REACT_APP_BACKEND_V1_GET_URL,
+          REACT_APP_BACKEND_V2_GET_URL: process.env.REACT_APP_BACKEND_V2_GET_URL,
+          REACT_APP_BACKEND_V2_POST_URL: process.env.REACT_APP_BACKEND_V2_POST_URL,
+          REACT_APP_SOCKET_SERVER_URL: process.env.REACT_APP_SOCKET_SERVER_URL,
+        })
+      %>
+    </script>
 
     <% if (process.env.REACT_APP_INCLUDE_GTAG === 'true') { %>
     <script
